feat: themed icons android

--- a/android/app/src/main/res/drawable/ic_launcher_monocrome.xml
+++ b/android/app/src/main/res/drawable/ic_launcher_monocrome.xml
@@ -1,24 +1,5 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="1025"
-    android:viewportHeight="802">
-  <group android:scaleX="0.65"
-      android:scaleY="0.5085854"
-      android:translateX="179.375"
-      android:translateY="260">
-    <path
-        android:pathData="M921.7,94.9C974.9,138.6 983.2,217.6 940.2,271.4L914.5,303.6C910.3,308.8 902.7,309.6 897.6,305.4L723.6,162.6C718.5,158.3 717.7,150.7 721.8,145.5L747.6,113.2C790.5,59.4 868.5,51.2 921.7,94.9Z"
-        android:strokeWidth="10"
-        android:fillColor="#000000"
-        android:strokeColor="#000000"/>
-    <path
-        android:pathData="M104.3,86.2C157.5,42.5 235.4,50.7 278.4,104.5L287.7,116.2C301,132.7 298.4,157.1 282,170.5L148.7,280C132.3,293.4 108.3,290.9 95.1,274.3L85.8,262.6C42.8,208.8 51.1,129.8 104.3,86.2Z"
-        android:strokeWidth="10"
-        android:fillColor="#000000"
-        android:strokeColor="#000000"/>
-    <path
-        android:pathData="M523,18C792.3,18 1010.6,236.3 1010.6,505.5V802H35.5V505.5C35.5,236.3 253.8,18 523,18ZM570.5,540C562.9,540 556.8,546.3 556.8,554V555H495.8L495.1,555C466.5,555.4 443.3,578.7 443.3,607.5L443.3,608.2C443.7,636.6 466.7,659.6 495.1,660L495.8,660H546.7V677.5C546.7,693.8 559.6,707 575.6,707C591.5,707 604.4,693.8 604.4,677.5V678.5C604.4,694.2 616.9,707 632.3,707C647.7,707 660.2,694.2 660.2,678.5V660H710.6L711.3,660C739.8,659.6 762.8,636.6 763.1,608.2L763.1,607.5C763.1,578.5 739.6,555 710.6,555H649.7C649.7,546.7 643.1,540 635,540H570.5ZM557,565C559.2,589.1 579.1,608 603.2,608C627.4,608 647.3,589.1 649.5,565H710.6C734.1,565 753.1,584 753.1,607.5C753.1,631 734.1,650 710.6,650H495.8C472.3,650 453.3,631 453.3,607.5C453.3,584 472.3,565 495.8,565H557ZM402.7,410C380.3,410 362.1,435.7 362.1,467.5C362.1,499.3 380.3,525 402.7,525C425.1,525 443.3,499.3 443.3,467.5C443.3,435.7 425.1,410 402.7,410ZM732.8,410C710.1,410 691.7,435.7 691.7,467.5C691.7,499.3 710.1,525 732.8,525C755.5,525 773.9,499.3 773.9,467.5C773.9,435.7 755.5,410 732.8,410ZM387.6,331C373.5,331 362.1,342.6 362.1,357C362.1,371.4 373.5,383 387.6,383H414C428,383 439.4,371.4 439.4,357C439.4,342.6 428,331 414,331H387.6ZM717.2,331C703.1,331 691.7,342.6 691.7,357C691.7,371.4 703.1,383 717.2,383H743.6C757.6,383 769,371.4 769,357C769,342.6 757.6,331 743.6,331H717.2Z"
-        android:fillColor="#020202"/>
-  </group>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<adaptive-icon xmlns:android="http://schemas.android.com/apk/res/android">
+  <background android:drawable="@mipmap/ic_launcher_monocrome_background"/>
+  <foreground android:drawable="@mipmap/ic_launcher_monocrome_foreground"/>
+</adaptive-icon>
